# spark-pipeline-framework

./: .env.example  .gitignore  DATABRICKS_PIPELINE_RESULTS.md  DATABRICKS_QUICKSTART.md  DATABRICKS_TEST_RESULTS.md  DYNAMIC_CONFIGURATION_SUMMARY.md  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  LDP_CONFIGURATION_GUIDE.md  LDP_IMPLEMENTATION_SUMMARY.md  LDP_SUCCESS_SUMMARY.md  LICENSE  Makefile  QUERY_REFERENCE.md  README.md  ldp_config.yaml  pyproject.toml  requirements-databricks-dev.txt  requirements-databricks.txt  requirements-dev.txt  requirements.txt
configs/databricks/: product_analytics_databricks.yaml  segment_analytics_databricks.yaml  user_analytics_databricks.yaml
configs/examples/: user_analytics.yaml
configs/schemas/: pipeline_schema.json
docs/: configuration_guide.md  databricks_guide.md  quickstart.md  testing_guide.md  transformation_guide.md
examples/user_analytics/: README.md
ldp_generated/: databricks_user_analytics.sql  databricks_user_analytics.sql.backup
scripts/: create_ldp_job.py  create_sample_data_in_volume.py  generate_and_deploy_ldp.py  init_ldp_config.py  run_databricks_pipelines.py  run_pipeline.py  setup_databricks_auth.py  validate_config.py
spark_pipeline/: __init__.py
spark_pipeline/core/: __init__.py  config_parser.py  context.py  engine.py  exceptions.py  reader.py  writer.py
spark_pipeline/ldp_generator/: __init__.py  config.py  pipeline_deployer.py  sql_generator.py
spark_pipeline/transformations/: __init__.py  base.py  builtin.py  python.py  (+2 more)
tests/: __init__.py  conftest.py  databricks_conftest.py  test_databricks_integration.py
transformations/: __init__.py  user_analytics.py
(+16 files in other folders)
